# workspace

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IDEAS.md  LICENSE  LICENSE-MIT.md  README.md  TEST_COVERAGE_ANALYSIS.md  manage.py  package.json  pyproject.toml  tailwind.config.js
.claude/skills/reviewing-query-performance/: SKILL.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker.yml  editor-bundle.yml  tests.yml  trivy.yml
.run/: Tests.run.xml  makemigrations.run.xml  migrate.run.xml  workspace.run.xml
.superpowers/brainstorm/1016-1773868288/: call-ui-layout.html
docs/: README.md
docs/ai/: README.md
docs/calendar/: README.md
docs/chat/: README.md
docs/deployments/: README.md  app.yaml  configmap.yaml  ingress.yaml  secrets.yaml
docs/deployments/docker-compose/: README.md  docker-compose.yml  settings.yml
docs/deployments/kubernetes/: README.md  app.yaml  configmap.yaml  ingress.yaml  searxng.yaml  secrets.yaml
docs/files/: README.md
docs/guides/: sqlite-to-postgres.md
docs/mail/: README.md
docs/notes/: README.md
docs/notifications/: README.md
docs/passwords/: CRYPTO_ARCHITECTURE.md
docs/plans/: 2026-02-21-emoji-picker-design.md  2026-02-24-dashboard-app-grid-design.md  2026-02-24-dashboard-app-grid-plan.md  2026-03-04-chat-mentions-design.md  2026-03-04-chat-mentions.md  2026-03-04-rate-limiting-design.md  2026-03-04-rate-limiting-plan.md
docs/superpowers/plans/: 2026-03-18-voice-chat.md  2026-05-14-llm-event-extraction-from-mail.md
docs/superpowers/specs/: 2026-03-18-voice-chat-design.md  2026-04-17-delete-vault-design.md  2026-05-14-llm-event-extraction-from-mail-design.md
scripts/: _screenshot_seed.py  generate_pwa_icons.py  makemigrations.ps1  makemigrations.sh  migrate.ps1  migrate.sh  release.py  runserver.ps1  runserver.sh  screenshots.py  seed_demo.py  seed_demo.sh  setup.ps1  setup.sh
scripts/editor/: milkdown-editor.js  package-lock.json  package.json
scripts/tailwind/: package-lock.json  package.json  tailwind.config.js
templates/health_check/: index.html
workspace/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
workspace/ai/: admin.py  apps.py  client.py  context_processors.py  image_service.py  metrics.py  models.py  serializers.py  sse_provider.py  tasks.py  tool_registry.py  tools.py  urls.py  views.py  web_service.py
workspace/ai/migrations/: 0001_initial.py  0002_create_default_bot.py  0003_add_editor_task_type.py  0004_usermemory.py  0005_bot_permissions.py  0006_set_existing_bots_public.py  0007_add_bot_capability_flags.py  0008_alter_aitask_uuid.py  0009_scheduled_message.py  0010_aitask_raw_messages.py  0011_alter_aitask_task_type.py  0012_conversation_summary.py  0013_aitask_aitask_owner_status.py  0014_partial_scheduled_index.py  0015_alter_aitask_task_type.py
workspace/ai/prompts/: base.py  calendar.py  chat.py  editor.py  mail.py
workspace/ai/services/: ai_task.py  chat_response.py  chat_summary.py  chat_title.py  conversation_history.py  dispatch.py  editor.py  image.py  llm.py  mail_classifier.py  mail_compose.py  mail_summary.py  responses.py  scheduled_response.py  tool_loop.py  video.py  (+2 more)
workspace/calendar/: activity.py  admin.py  ai_tools.py  apps.py  models.py  models_external.py  queries.py  recurrence.py  search.py  serializers.py  serializers_external.py  serializers_polls.py  tasks.py  tests.py  tests_polls.py  upcoming.py  urls.py  views.py  views_external.py  views_polls.py
workspace/chat/: activity.py  admin.py  ai_tools.py  apps.py  avatar_service.py  call_models.py  call_serializers.py  call_services.py  call_tasks.py  call_views.py  link_preview_service.py  models.py  search.py  serializers.py  services.py  sse_provider.py  tasks.py  tests.py  tests_call.py  tests_purge_orphan_attachments.py  urls.py  views.py  views_attachments.py  views_avatar.py  views_bots.py  views_calls.py  views_interactions.py  views_messages.py  views_pins.py  views_scheduled.py  views_search.py  views_sse.py  views_typing.py
workspace/common/: apps.py  booleans.py  cache.py  celery_claim.py  closing.py  context_processors.py  fields.py  filters.py  http_ranges.py  image_service.py  logging.py  metrics.py  middleware_ratelimit.py  mixins.py  ratelimit.py  search.py  urls.py  uuids.py  views.py  views_errors.py  webrtc.py
workspace/core/: activity_registry.py  activity_service.py  activity_views.py  admin.py  apps.py  authentication.py  changelog.py  context_processors.py  encryption.py  middleware.py  models.py  module_registry.py  setting_keys.py  signals.py  sse_registry.py  tasks.py  tests.py  tests_activity.py  tests_activity_api.py  tests_search.py  urls.py  views.py  views_changelog.py  views_health.py  views_sse.py
workspace/dashboard/: apps.py  tests.py  urls.py  views.py
workspace/files/: activity.py  admin.py  ai_tools.py  apps.py  metrics.py  models.py  search.py  serializers.py  serializers_tags.py  services.py  sse_provider.py  storage.py  sync.py  tasks.py  tests.py  urls.py  utils.py  views.py  views_graph.py  views_share_links.py  views_tags.py  views_thumbnails.py
workspace/mail/: activity.py  admin.py  ai_tools.py  apps.py  models.py  queries.py  search.py  serializers.py  signals.py  tasks.py  urls.py  views.py  views_attachments.py  views_compose.py  views_contacts.py  views_extractions.py  views_folders.py  views_labels.py  views_messages.py  views_oauth2.py  views_rules.py
workspace/notes/: activity.py  apps.py  search.py
workspace/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  sse_provider.py  tasks.py  urls.py  views.py
workspace/passwords/: apps.py  models.py  serializers.py  urls.py  views.py
workspace/projects/: activity.py  apps.py  models.py  queries.py  search.py  serializers.py  urls.py  views_actions.py  viewsets.py
workspace/users/: admin.py  ai_tools.py  apps.py  avatar_service.py  banner_palettes.py  context_processors.py  middleware.py  models.py  presence_service.py  settings_service.py  sse_provider.py  urls.py  views.py
(+897 files in other folders)
