[project]
name = "workspace"
version = "0.26.0"
description = "Self-hosted productivity suite (files, chat, mail, calendar, notes, AI assistants) designed to run anywhere — from a single Raspberry Pi to a multi-node Kubernetes deployment."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6,<7.0",
    "djangorestframework==3.17.1",
    "django-filter==25.2",
    "drf-spectacular==0.29.0",
    "drf-orjson-renderer>=1.7.0",
    "django-rest-knox>=5.0.0",
    "whitenoise>=6.11.0",
    "django-redis>=7.0.0",
    "django-simple-history>=3.8.0",
    "django-daisy==2.0.7",
    # celery
    "celery>=5.6.2",
    "redis>=8.0.0",
    # imaging
    "pillow>=11.0",
    "cairosvg>=2.9.0",
    # mail
    "cryptography>=48.0.0",
    "nh3>=0.3.5",
    "myl-discovery>=0.6.4",
    "icalendar>=7.1.2",
    # utils
    "mistune>=3.2.1",
    "pygments>=2.20.0",
    "dj-database-url>=2.3.0",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.1",
    # webdav
    "wsgidav>=4.3.4",
    # server
    "gunicorn>=26.0.0",
    "django-http-compression[brotli]>=1.4.0",
    "gevent>=26.5.0",
    "django-prometheus>=2.5.0",
    # push notifications
    "pywebpush>=2.3.0",
    # oauth2
    "authlib>=1.7.2",
    # file type detection
    "magika>=1.0.0",
    # ai
    "openai>=2.40.0",
    "ollama>=0.6.2",
    # web search & scraping
    "httpx>=0.28.0",
    "trafilatura>=2.0.0",
    # streaming ZIP generation for bulk downloads (constant RAM)
    "zipstream-ng>=1.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage[toml]>=7.14.1",
    "django-debug-toolbar==6.3.0",
    # End-to-end / UI tests. Playwright is only needed when E2E=1 is set;
    # otherwise the E2E test cases are skipped (see workspace/common/tests/e2e/).
    "playwright>=1.60.0",
]

[tool.coverage.run]
source = ["workspace"]
branch = true
parallel = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "workspace/settings.py",
    "workspace/asgi.py",
    "workspace/wsgi.py",
    "workspace/celery.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
