[project]
name = "workspace"
version = "0.29.0"
description = "Self-hosted productivity suite (files, chat, mail, calendar, notes, AI assistants) designed to run anywhere — from a single Raspberry Pi to a multi-node Kubernetes deployment."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7,<7.0",
    "djangorestframework==3.17.1",
    "django-filter==25.2",
    "drf-spectacular==0.30.0",
    "drf-orjson-renderer>=1.7.0",
    "django-rest-knox>=5.0.0",
    "whitenoise>=6.11.0",
    "django-redis>=7.0.0",
    "django-daisy==2.0.7",
    # celery
    "celery>=5.6.2",
    "redis>=8.0.1",
    # C-accelerated RESP parser; redis-py auto-detects and uses it when present
    "hiredis>=3.0.0",
    # imaging
    "pillow>=12.3.0",
    "cairosvg>=2.9.0",
    # mail
    "cryptography>=49.0.0",
    "nh3>=0.3.6",
    "myl-discovery>=0.6.4",
    "icalendar>=7.2.0",
    # utils
    "mistune>=3.3.2",
    "pygments>=2.20.0",
    "dj-database-url>=2.3.0",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.1",
    # webdav
    "wsgidav>=4.3.5",
    # server
    "gunicorn>=26.0.0",
    "django-http-compression[brotli]>=1.4.0",
    "gevent>=26.5.0",
    "django-prometheus>=2.5.0",
    # push notifications
    "pywebpush>=2.3.0",
    # oauth2
    "authlib>=1.7.2",
    # file type detection
    "magika>=1.0.0",
    # ai
    "openai>=2.44.0",
    "ollama>=0.6.2",
    # web search & scraping
    "httpx>=0.28.0",
    "trafilatura>=2.1.0",
    # streaming ZIP generation for bulk downloads (constant RAM)
    "zipstream-ng>=1.9.2",
    "faker>=38.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage[toml]>=7.15.0",
    "django-debug-toolbar==7.0.0",
    # Fake data generation for scripts/seed_demo.py (dev/demo seeding only).
    # End-to-end / UI tests. Playwright is only needed when E2E=1 is set;
    # otherwise the E2E test cases are skipped (see workspace/common/tests/e2e/).
    "playwright>=1.61.0",
    # Exact pin: the ruff-action CI job auto-discovers this version from
    # pyproject.toml, keeping CI and local runs on the same ruff release.
    "ruff==0.15.21",
]

[tool.ruff]
target-version = "py314"
# Django auto-generated code - never linted nor formatted.
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
]
ignore = [
    # Line length is owned by the formatter; E501 would force manual edits of
    # long strings/comments the formatter cannot split.
    "E501",
    # Fixing null=True on string-based fields requires schema migrations on
    # existing models - out of scope for lint adoption. Revisit per field.
    "DJ001",
]

[tool.ruff.lint.per-file-ignores]
# settings.py interleaves imports with the config sections they belong to.
"workspace/settings.py" = ["E402"]
# Tests assert generic mock failures (side_effect=Exception) on purpose.
"workspace/*/tests/*" = ["B017"]

[tool.coverage.run]
source = ["workspace"]
branch = true
parallel = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "workspace/settings.py",
    "workspace/asgi.py",
    "workspace/wsgi.py",
    "workspace/celery.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
